Fix overflow on my phone

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,7 +20,11 @@
   }
 
   &__number-buttons .number-button:not(:last-of-type) {
-    margin-right: 6px;
+    margin-right: 2px;
+
+    @media screen and (min-width: 376px) {
+      margin-right: 6px;
+    }
   }
 }
 
@@ -90,12 +94,17 @@ $bold-border: 2px solid #444;
   &__input {
     display: block;
     font-size: 30px;
-    width: 1.5em;
-    height: 1.5em;
+    width: 1.25em;
+    height: 1.25em;
     padding: 0;
     box-sizing: border-box;
     text-align: center;
     border: none;
     background-color: transparent;
+
+    @media screen and (min-width: 376px) {
+      width: 1.5em;
+      height: 1.55em;
+    }
   }
 }
